--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@ html, body, div, p {
 }
 
 body {
-  font: bold 1.5vw/1.2 Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font: bold 2vmax/1.2 Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0 auto;
   max-width: 60em;
-  padding: 6vw;
+  padding: 4em;
 }
 
 a {
@@ -36,5 +36,5 @@ a {
   font-size: 0.5em;
   opacity: 0.5;
   position: absolute;
-  bottom: 6vw;
+  bottom: 4rem;
 }
