--- a/style.css
+++ b/style.css
@@ -5,45 +5,78 @@ select, p {
   font: inherit;
 }
 
-body {
-  font: bold 2vmax/1.2 Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  margin: 0 auto;
-  max-width: 60em;
-  padding: 4em;
-}
-
 a {
   color: inherit;
   text-decoration: none;
 }
 
+body {
+  -webkit-font-smoothing: antialiased;
+  color: rgba(0, 0, 0, 0.5);
+  font: 12px Montserrat, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  margin: 0 auto;
+  max-width: 600px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.loading {
+  display: none;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
 #verse {
-  font-family: Bitter, Georgia, serif;
-  font-size: 2em;
+  color: rgba(255, 255, 255, 0.75);
+  font-family: Charter, Georgia, serif;
+  font-size: 18px;
+  font-weight: bold;
   letter-spacing: 0;
+  line-height: 26px;
+  border: 3px solid rgba(0, 0, 0, 0.4);
+  padding: 80px;
+}
+
+@media (max-width: 600px) {
+  #verse {
+    font-size: 16px;
+    line-height: 24px;
+    padding: 80px 40px;
+  }
 }
 
 #ref {
   display: block;
-  letter-spacing: 0.25em;
-  margin-top: 2em;
+  letter-spacing: 1px;
+  margin-top: 24px;
   text-transform: uppercase;
 }
 
 footer {
-  font-size: 0.5em;
-  opacity: 0.5;
+  display: flex;
   line-height: 1.5;
-  position: absolute;
-  bottom: 4rem;
 }
 
-select {
+#version {
   -webkit-appearance: none;
   background: none;
   color: inherit;
+  flex: 1;
 }
 
-select:focus {
+#version:focus {
   outline: none;
+}
+
+#ref:hover, #version:hover, #credit:hover {
+  color: rgba(255, 255, 255, 0.8);
+  cursor: pointer;
 }
